@@ -5,6 +5,7 @@ Date: ????
     - Fixed event.name being a string of the event name instead of the integer registration identifier
     - Prevent a VERY STRONG memory leak
     - Switch to a ScriptInventory to trigger subtick events
+    - Fixed on_pre_circuit_network_destroyed and on_pre_circuit_network_split not firing
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025-08-21
